@@ -2,6 +2,9 @@
 
 	* lib/tree.rb: Updated the marshalling logic to correctly handle
 	non-string content.
+	(Tree::TreeNode::createDumpRep): Minor code change to use symbols
+	instead of string key names.
+	(Tree): Version number change to 0.5.0
 
 	* test/test_tree.rb (TC_TreeTest::test_breadth_each): Updated test
 	cases for the marshalling logic.
